# sph-rtnn

./: CMakeCache.txt  CMakeLists.txt  Makefile  build-compare.sh  build.sh  clean.sh  cmake_install.cmake  compare-points.py  compare.py  gmon.out  make_log.txt  methods.txt  output.txt  profile.txt  triforce.cpp  visualize.py  yorick_diffusion_output.txt
data/Diffusion/: particles_0.csv  particles_1.csv  particles_10.csv  particles_100.csv  particles_1000.csv  particles_1001.csv  particles_1002.csv  particles_1003.csv  particles_1004.csv  particles_1005.csv  particles_1006.csv  particles_1007.csv  particles_1008.csv  particles_1009.csv  particles_101.csv  particles_1010.csv  particles_1011.csv  particles_1012.csv  particles_1013.csv  particles_1014.csv  particles_1015.csv  particles_1016.csv  particles_1017.csv  particles_1018.csv  particles_1019.csv  particles_102.csv  particles_1020.csv  particles_1021.csv  particles_1022.csv  particles_1023.csv  particles_1024.csv  particles_1025.csv  particles_1026.csv  particles_1027.csv  particles_1028.csv  particles_1029.csv  particles_103.csv  particles_1030.csv  (+1964 more)
debug/: add_particle_2.txt  drho_loop3.txt  post_loop2_drho_2.txt  pre_loop2_drho_2.txt  rho_loop1.txt  rho_loop3_postchange.txt
notes/: W  gmon.out  hsml.txt  new-hsml.txt  newest-points-data.txt  rho.txt
src/: ChainingMesh.h  Diagnostics.h  IO.h  IdealGasEos.h  Kernel.h  NeighborsBase.h  Parameters.h  SPH.h  SimulationBase.h  Utilities.h  constants.h  optix.h  output.txt
test_so/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_so.cpp
(+8299 files in other folders)
